test/resources/testcontents/testing/saker/build/tests/tasks/script/SyntaxErrorsScriptTaskTest/saker.build
missingparen {
();
}
missingsubsc {
$var = { a:x };
$var[];
}
missingif{
if $ {
}
}


normal {
}